pgpkeys: Add new emaste@ key

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -879,6 +879,9 @@ include::{include-path}christos.key[]
 === `{marino}`
 include::{include-path}marino.key[]
 
+=== `{emaste}`
+include::{include-path}emaste.key[]
+
 === `{cherry}`
 include::{include-path}cherry.key[]
 
