handbook/cutting-edge: tags
Add two tags:

- FreeBSD-RELEASE
- pkgbase.

Use alphabetical order.

Signed-off-by: Graham Perrin <grahamperrin@gmail.com>

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -4,7 +4,7 @@ part: Part III. System Administration
 prev: books/handbook/l10n
 next: books/handbook/dtrace
 description: Information about how to keep a FreeBSD system up-to-date with freebsd-update or Git, how to rebuild and reinstall the entire base system, etc
-tags: ["updating", "upgrading", "documentation", "FreeBSD-STABLE", "FreeBSD-CURRENT", "Security Patches"]
+tags: ["documentation", "FreeBSD-CURRENT", "FreeBSD-RELEASE", "FreeBSD-STABLE", "pkgbase", "Security Patches", "updating", "upgrading"]
 showBookMenu: true
 weight: 30
 params:
