handbook/cutting-edge: FreeBSD-base: table
Lowercase url, consistent with what's seen in a repo configuration.

Leading \ to de-link url strings, which are not browsable URLs.
https://docs.asciidoctor.org/asciidoc/latest/syntax-quick-reference/#escaping-substitutions

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1179,31 +1179,31 @@ There are different branches to choose from (by changing the url accordingly):
 |===
 | Branch
 | Frequency
-| URL
+| url for repo configuration
 
 | main
 | twice daily - 12:00 and 00:00 UTC
-| `https://pkg.freebsd.org/${ABI}/base_latest`
+| \https://pkg.freebsd.org/${ABI}/base_latest
 
 | main
 | weekly – Sunday at 12:00 UTC
-| `https://pkg.freebsd.org/${ABI}/base_weekly`
+| \https://pkg.freebsd.org/${ABI}/base_weekly
 
 | stable/14
 | twice daily – 12:00 and 00:00 UTC
-| `https://pkg.freebsd.org/${ABI}/base_latest`
+| \https://pkg.freebsd.org/${ABI}/base_latest
 
 | stable/14
 | weekly – Sunday at 12:00 UTC
-| `https://pkg.freebsd.org/${ABI}/base_weekly`
+| \https://pkg.freebsd.org/${ABI}/base_weekly
 
 | releng/14.2
 | twice daily – 12:00 and 00:00 UTC
-| `https://pkg.freebsd.org/${ABI}/base_release_2`
+| \https://pkg.freebsd.org/${ABI}/base_release_2
 
 | releng/14.3
 | twice daily – 12:00 and 00:00 UTC
-| `https://pkg.freebsd.org/${ABI}/base_release_3`
+| \https://pkg.freebsd.org/${ABI}/base_release_3
 |===
 
 To upgrade the system, change the configuration file according to the desired release, and run:
