handbook/cutting-edge: pkbase: minor upgrades
Add a subsection heading for minor upgrades from the FreeBSD-base repo.

Signed-off-by: Graham Perrin <grahamperrin@gmail.com>

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1148,6 +1148,8 @@ man:pkgbasify[8] (or whatever outcome link:https://reviews.freebsd.org/D51594[D5
 This is still in development, so please be careful especially when converting an existing system to use pkgbase.
 ====
 
+==== Performing Minor version upgrades
+
 Create a folder for custom pkg repository config files, if there is none present already.
 
 [source,shell]
