Replace vestiges of nonexistent /cdrom to /media
PR:	282681
Event:	Oslo Hackathon 2025

--- a/documentation/content/en/books/handbook/basics/_index.adoc
+++ b/documentation/content/en/books/handbook/basics/_index.adoc
@@ -1076,7 +1076,7 @@ The root directory also contains mount points for other file systems that are mo
 
 A mount point is a directory where additional file systems can be grafted onto a parent file system (usually the root file system).
 This is further described in crossref:basics[disk-organization, Disk Organization].
-Standard mount points include `/usr/`, `/var/`, `/tmp/`, `/mnt/`, and `/cdrom/`.
+Standard mount points include `/usr/`, `/var/`, `/tmp/`, `/mnt/`, and `/media/`.
 These directories are usually referenced to entries in `/etc/fstab`.
 This file is a table of various file systems and mount points and is read by the system.
 Most of the file systems in `/etc/fstab` are mounted automatically at boot time from the script man:rc[8] unless their entry includes `noauto`.
