--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -415,8 +415,8 @@ If physical access to the system is available, a copy of the `GENERIC` kernel ca
 
 [source,shell]
 ....
-# mount /cdrom
-# cd /cdrom/usr/freebsd-dist
+# mount /media
+# cd /media/usr/freebsd-dist
 # tar -C/ -xvf kernel.txz boot/kernel/kernel
 ....
 
