--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -319,11 +319,11 @@ The examples can be modified to match the file systems and client names on the r
 There are many options that can be used in this file, but only a few will be mentioned here.
 See man:exports[5] for the full list of options.
 
-This example shows how to export [.filename]#/cdrom# to three hosts named _alpha_, _bravo_, and _charlie_:
+This example shows how to export [.filename]#/media# to three hosts named _alpha_, _bravo_, and _charlie_:
 
 [.programlisting]
 ....
-/cdrom -ro alpha bravo charlie
+/media -ro alpha bravo charlie
 ....
 
 The `-ro` flag makes the file system read-only, preventing clients from making any changes to the exported file system.
