Add HUGO_CMD variable for running on mac OS
PR:	288591
Event:	Oslo Hackathon 2025

--- a/documentation/content/pt-br/books/fdp-primer/overview/_index.adoc
+++ b/documentation/content/pt-br/books/fdp-primer/overview/_index.adoc
@@ -276,7 +276,7 @@ Revise a saída e edite os arquivos para corrigir os problemas informados e, em 
 +
 [source, shell]
 ....
-$ bmake run USE_RUBYGEMS=YES RUBY_CMD=$(brew --prefix ruby)/bin/ruby
+$ bmake run USE_RUBYGEMS=YES RUBY_CMD="$(brew --prefix ruby)/bin/ruby" HUGO_CMD="$(brew --prefix hugo)/bin/hugo"
 ....
 . Adicione todos os arquivos com `git add .`, então revise o diff com `git diff`. Por exemplo:
 +
