Switch Debian version from focal to jammy in the Linuxulator
Debian Focal went EoL in May 2025. Replace references to the current
jammy version in examples and sources.list, including the uname output.

PR:	288523
Event:	Oslo Hackathon 2025

--- a/documentation/content/en/books/handbook/linuxemu/_index.adoc
+++ b/documentation/content/en/books/handbook/linuxemu/_index.adoc
@@ -119,7 +119,7 @@ In order to run Linux software a Linux userland must be installed first.
 If all that is wanted is to run some software already included in the Ports tree, it can be installed via package manager and man:pkg[8] will automatically setup the required Linux userland.
 
 For example, to install Sublime Text 4, along with all the Linux libraries it depends on, run this command:
- 
+
 [source,shell]
 ....
 # pkg install linux-sublime-text4
@@ -231,7 +231,7 @@ Once enabled, execute the following command to install Ubuntu or Debian in [.fil
 
 [source,shell]
 ....
-# debootstrap focal /compat/ubuntu
+# debootstrap jammy /compat/ubuntu
 ....
 
 [NOTE]
@@ -244,11 +244,11 @@ The output should be similar to the following:
 
 [.programlisting]
 ....
-I: Retrieving InRelease 
+I: Retrieving InRelease
 I: Checking Release signature
 I: Valid Release signature (key id F6ECB3762474EDA9D21B7022871920D1991BC93C)
-I: Retrieving Packages 
-I: Validating Packages 
+I: Retrieving Packages
+I: Validating Packages
 I: Resolving dependencies of required packages...
 I: Resolving dependencies of base packages...
 I: Checking component main on http://archive.ubuntu.com/ubuntu...
@@ -307,7 +307,7 @@ The output should be similar to the following:
 
 [.programlisting]
 ....
-Linux 3.17.0 x86_64
+Linux 5.15.0 x86_64
 ....
 
 Once inside the chroot, the system behaves as in a normal Ubuntu installation.
@@ -321,10 +321,10 @@ For amd64 the following example can be used:
 
 [.programlisting]
 ....
-deb http://archive.ubuntu.com/ubuntu focal main universe restricted multiverse
-deb http://security.ubuntu.com/ubuntu/ focal-security universe multiverse restricted main
-deb http://archive.ubuntu.com/ubuntu focal-backports universe multiverse restricted main
-deb http://archive.ubuntu.com/ubuntu focal-updates universe multiverse restricted main
+deb http://archive.ubuntu.com/ubuntu jammy main universe restricted multiverse
+deb http://security.ubuntu.com/ubuntu/ jammy-security universe multiverse restricted main
+deb http://archive.ubuntu.com/ubuntu jammy-backports universe multiverse restricted main
+deb http://archive.ubuntu.com/ubuntu jammy-updates universe multiverse restricted main
 ....
 
 For arm64 this other example can be used:
