--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -175,25 +175,33 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |29 October 2024
 |Certificate revocation list man:fetch[1] option fails
 
-| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:01.openssh.asc[FreeBSD-SA-25:01.openssh]
-| 2025-01-29
-| OpenSSH Keystroke Obfuscation Bypass
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:01.openssh.asc[FreeBSD-SA-25:01.openssh]
+|29 January 2025
+|OpenSSH Keystroke Obfuscation Bypass
 
-| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:02.fs.asc[FreeBSD-SA-25:02.fs]
-| 2025-01-29
-| Buffer overflow in some filesystems via NFS
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:02.fs.asc[FreeBSD-SA-25:02.fs]
+|29 January 2025
+|Buffer overflow in some filesystems via NFS
 
-| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:03.etcupdate.asc[FreeBSD-SA-25:03.etcupdate]
-| 2025-01-29
-| Unprivileged access to system files
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:03.etcupdate.asc[FreeBSD-SA-25:03.etcupdate]
+|29 January 2025
+|Unprivileged access to system files
 
-| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:04.ktrace.asc[FreeBSD-SA-25:04.ktrace]
-| 2025-01-29
-| Uninitialized kernel memory disclosure via man:ktrace[2]
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:04.ktrace.asc[FreeBSD-SA-25:04.ktrace]
+|29 January 2025
+|Uninitialized kernel memory disclosure via man:ktrace[2]
 
-| https://www.freebsd.org/security/advisories/FreeBSD-SA-25:05.openssh.asc[FreeBSD-SA-25:05.openssh]
-| 2025-02-21
-| Multiple vulnerabilities in OpenSSH
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:05.openssh.asc[FreeBSD-SA-25:05.openssh]
+|21 February 2025
+|Multiple vulnerabilities in OpenSSH
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:06.xz.asc[FreeBSD-SA-25:06.xz]
+|02 July 2025
+|Use-after-free in multi-threaded xz decoder
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:07.libarchive.asc[FreeBSD-SA-25:07.libarchive]
+|08 August 2025
+|Integer overflow in libarchive leading to double free
 |===
 
 [[errata]]
@@ -286,7 +294,7 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |19 June 2024
 |Lock order reversal in killpg causing livelock
 
-|https://www.freebsd.org/security/advisories/FreeBSD-EN-24:13.libc++.asc[FreeBSDS-EN-24:13:libc++]
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-24:13.libc\+\+.asc[FreeBSDS-EN-24:13:libc++]
 |19 June 2024
 |Incorrect size passed to heap allocated std::string delete
 
@@ -306,37 +314,61 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |20 October 2024
 |XDG runtime directory's file descriptor leak at login
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:01.rpc.asc[FreeBSD-EN-25:01.rpc]
-| 2025-01-29
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:01.rpc.asc[FreeBSD-EN-25:01.rpc]
+|29 January 2025
 | NULL pointer dereference in the NFSv4 client
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:02.audit.asc[FreeBSD-EN-25:02.audit]
-| 2025-01-29
-| System call auditing disabled by DTrace
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:02.audit.asc[FreeBSD-EN-25:02.audit]
+|29 January 2025
+|System call auditing disabled by DTrace
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:03.tzdata.asc[FreeBSD-EN-25:03.tzdata]
-| 2025-01-29
-| Timezone database information update
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:03.tzdata.asc[FreeBSD-EN-25:03.tzdata]
+|29 January 2025
+|Timezone database information update
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:04.tzdata.asc[FreeBSD-EN-25:04.tzdata]
-| 2025-04-10
-| Timezone database information update
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:04.tzdata.asc[FreeBSD-EN-25:04.tzdata]
+|10 April 2025
+|Timezone database information update
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:05.expat.asc[FreeBSD-EN-25:05.expat]
-| 2025-04-10
-| Update expat to 2.7.1
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:05.expat.asc[FreeBSD-EN-25:05.expat]
+|10 April 2025
+|Update expat to 2.7.1
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:06.daemon.asc[FreeBSD-EN-25:06.daemon]
-| 2025-04-10
-| man:daemon[8] missing signals
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:06.daemon.asc[FreeBSD-EN-25:06.daemon]
+|10 April 2025
+|man:daemon[8] missing signals
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:07.openssl.asc[FreeBSD-EN-25:07.openssl]
-| 2025-04-10
-| Update OpenSSL to 3.0.16
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:07.openssl.asc[FreeBSD-EN-25:07.openssl]
+|10 April 2025
+|Update OpenSSL to 3.0.16
 
-| https://www.freebsd.org/security/advisories/FreeBSD-EN-25:08.caroot.asc[FreeBSD-EN-25:08.caroot]
-| 2025-04-10
-| Root certificate bundle update
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:08.caroot.asc[FreeBSD-EN-25:08.caroot]
+|10 April 2025
+|Root certificate bundle update
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:09.libc.asc[FreeBSD-EN-25:09:libc]
+|02 July 2025
+|Dynamically-loaded C++ libraries crashing at exit
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:10.zfs.asc[FreeBSD-EN-25:10:zfs]
+|02 July 2025
+|Corruption in ZFS replication streams from encrypted datasets
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:11.ena.asc[FreeBSD-EN-25:11:ena]
+|02 July 2025
+|ena resets and kernel panic on Nitro v4 or newer instances
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:12.efi.asc[FreeBSD-EN-25:12:efi]
+|08 August 2025
+|man:bsdinstall[8] not copying the correct loader on systems with IA32 UEFI firmware.
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:13.wlan_tkip.asc[FreeBSD-EN-25:13:wlan_tkip]
+|08 August 2025
+|net80211 TKIP crypto support fails for some drivers
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:14.route.asc[FreeBSD-EN-25:14:route]
+|08 August 2025
+|man:route[8] monitor buffers too much when redirected to a file
 |===
 
 [[userland]]
@@ -414,7 +446,8 @@ gitref:3a2ec5957ea9[repository=src]
 === Contributed Software
 
 One True Awk (man:awk[1]) has been updated to 2nd Edition, with new -csv support and UTF-8 support.
-gitref:daf917daba9c[repository=src]
+The snapshot used is 20250804.
+gitref:b45a181a74c8[repository=src]
 
 The man:sendmail[8] suite has been upgraded to version 8.18.1, addressing CVE-2023-51765.
 gitref:58ae50f31e95[repository=src]
