--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -294,7 +294,7 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |19 June 2024
 |Lock order reversal in killpg causing livelock
 
-|https://www.freebsd.org/security/advisories/FreeBSD-EN-24:13.libc\+\+.asc[FreeBSDS-EN-24:13:libc++]
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-24:13.libc%2B%2B.asc[FreeBSDS-EN-24:13:libc++]
 |19 June 2024
 |Incorrect size passed to heap allocated std::string delete
 
@@ -1003,10 +1003,12 @@ The man:intro[5] to the File Formats manual has been revised, incorporating impr
 
 This section covers changes to the FreeBSD Ports Collection, package infrastructure, and package maintenance and installation tools.
 
-
 A new `FreeBSD-kmods` repository is included in the default `/etc/pkg/FreeBSD.conf` man:pkg[8] configuration file.
 This repository contains kernel modules compiled specifically for {releaseCurrent} rather than for the {releaseBranch} branch.
 Installing kernel modules from this repository allows drivers with unstable kernel interfaces, in particular graphics drivers, to work even when the main {releaseBranch} repository has packages build on a previous release. (gitref:a47542f71511[repository=src]).
+
+The `FreeBSD` and `FreeBSD-kmods` repositories defined in `/etc/pkg/FreeBSD.conf` have been renamed to `FreeBSD-ports` and `FreeBSD-ports-kmods` respectively.
+Users who override these in `/usr/local/etc/pkg/repos` will need to adjust their configuration to match the new names.
 
 [[Installer]]
 === Installer
