handbook/cutting-edge: listing non-base packages
Advice to save a list should be more prominent.

Offer a non-alarmist example of why the list might be useful: loss of power, as a cause of interruption to an upgrade.

The precaution of listing is relevant to pkg-upgrade(8) in general, not pkgbase in particular, but for now: have it near the head of the pkgbase upgrade subsection.

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1148,6 +1148,15 @@ man:pkgbasify[8] (or whatever outcome link:https://reviews.freebsd.org/D51594[D5
 This is still in development, so please be careful especially when converting an existing system to use pkgbase.
 ====
 
+Save a list of non-base packages:
+
+[source,shell]
+....
+pkg prime-origins | sort -u > /var/tmp/pkg-prime-origins.txt
+....
+
+The list might be useful if an interruption, such as loss of power, occurs during an upgrade.
+
 ==== Performing Minor version upgrades
 
 Create a folder for custom pkg repository config files, if there is none present already.
@@ -1235,13 +1244,6 @@ To create a new boot environment using the man:bectl[8] tool run:
 ....
 
 Use this boot environment to start the system as it was before the update if something goes wrong.
-
-Save a list of your non-base packages in case you need that later:
-
-[source,shell]
-....
-pkg prime-origins | sort -u > /var/tmp/pkg-prime-origins.txt
-....
 
 Change `/usr/local/etc/pkg/repos/FreeBSD-base.conf` to target the correct major release like `base_latest`, so it looks like:
 
