Avoid the use of 'you' in the documentation
Differential Revision:	https://reviews.freebsd.org/D52202

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -58,7 +58,7 @@ However, even official releases are often updated with security and other critic
 Regardless of the version used, FreeBSD provides all the necessary tools to keep the system updated, and allows for easy upgrades between versions.
 This chapter describes how to track the development system and the basic tools for keeping a FreeBSD system up-to-date.
 
-After reading this chapter, you will know:
+Read this chapter to learn:
 
 * How to keep a FreeBSD system up-to-date with freebsd-update or Git.
 * How to compare the state of an installed system against a known pristine copy.
@@ -66,7 +66,7 @@ After reading this chapter, you will know:
 * The difference between the two development branches: FreeBSD-STABLE and FreeBSD-CURRENT.
 * How to rebuild and reinstall the entire base system.
 
-Before reading this chapter, you should:
+Before reading this chapter:
 
 * Properly set up the network connection (crossref:advanced-networking[advanced-networking,Advanced Networking]).
 * Know how to install additional third-party software (crossref:ports[ports,Installing Applications: Packages and Ports]).
@@ -269,7 +269,7 @@ For example:
 
 * a kernel module that is built on 13.1 might *not* be suitable for 13.2.
 
-So, with any minor or major OS upgrade, if your package requirements include any kernel module:
+So, with any minor or major OS upgrade, if the package requirements include any kernel module:
 
 * *be prepared to build the module from source*.
 
@@ -687,8 +687,8 @@ For example:
 Usually this number is not all that important.
 However, when bug fixes are committed, this number makes it easy to quickly determine whether the fix is present in the currently running system.
 Developers will often refer to the hash of the commit (or provide a URL which has that hash), but not the n-number since the hash is the easily visible identifier for a change while the n-number is not.
-Security advisories and errata notices will also note an n-number, which can be directly compared against your system.
-When you need to use shallow Git clones, you cannot compare n-numbers reliably as the `git rev-list` command counts all the revisions in the repository which a shallow clone omits.
+Security advisories and errata notices will also note an n-number, which can be directly compared against the system.
+When shallow Git clones are used, n-numbers cannot be compared reliably, as the git rev-list command counts all revisions in the repository, which a shallow clone omits.
 
 [[makeworld]]
 == Updating FreeBSD from Source
@@ -1235,7 +1235,7 @@ To create a new boot environment using the man:bectl[8] tool run:
 
 Use this boot environment to start the system as it was before the update if something goes wrong.
 
-Save a list of your non-base packages in case you need that later:
+Save a list of the non-base packages in case they are needed later:
 
 [source,shell]
 ....
@@ -1255,22 +1255,22 @@ FreeBSD-base {
 }
 ....
 
-The next step will upgrade your system to the specified version.
+The next step will upgrade the system to the specified version.
 
 [WARNING]
 ====
-This step might remove non-base packages, which could include your running desktop environment.
+This step might remove non-base packages, which could include the running desktop environment.
 Be careful.
 ====
 
-Set the environment variable ABI to upgrade the major version (replace amd64 with your architecture and 15 with your targeted version).
+Set the environment variable ABI to upgrade the major version (replace amd64 with the architecture and 15 with the targeted version).
 
 [source,shell]
 ....
 # env ABI=FreeBSD:15:amd64 pkg-static upgrade -r FreeBSD-base
 ....
 
-There will be a prompt to ask if you want to ignore the version mismatch looking like this:
+There will be a prompt to ask about ignoring the version mismatch looking like this:
 
 [source,shell]
 ....
@@ -1303,12 +1303,12 @@ If something broke, go back and activate the backup boot environment created bef
 ....
 Reboot, and the system will be back to the state before upgrading.
 
-If you haven't created a boot environment, you might want to consider getting help from link:https://www.freebsd.org/support/[FreeBSD Support].
+If no boot environment was created before, consider getting help from link:https://www.freebsd.org/support/[FreeBSD Support].
 
 [[build-pkgbase-packages-locally]]
 === Manually building pkgbase and publishing it to the local network
 
-If you want to start building your own pkgbase packages clone the FreeBSD source tree:
+When building custom pkgbase packages clone the FreeBSD source tree:
 
 [source,shell]
 ....
