Avoid the use of "you" in the Advanced Networking chapter
Rewrite sentences that contain 'you', which should be avoided according
to the FDP Primer. The resulting sentences are easier to understand and
often shorter.  I did not change programlistings and other output as
these are from programs, which need to be changed first (out of scope of
this change).

Event:			Oslo Hackathon 2025
Reviewed by:		carlavilla
Differential Revision:	https://reviews.freebsd.org/D52204

--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -54,7 +54,7 @@ endif::[]
 
 This chapter covers a number of advanced networking topics.
 
-After reading this chapter, you will know:
+Read this chapter to learn:
 
 * The basics of gateways and routes.
 * How to set up USB tethering.
@@ -63,9 +63,9 @@ After reading this chapter, you will know:
 * How to set up network PXE booting.
 * How to enable and utilize the features of the Common Address Redundancy Protocol (CARP) in FreeBSD.
 * How to configure multiple VLANs on FreeBSD.
-* Configure bluetooth headset.
+* How to configure a bluetooth headset.
 
-Before reading this chapter, you should:
+Before reading this chapter:
 
 * Understand the basics of the [.filename]#/etc/rc# scripts.
 * Be familiar with basic network terminology.
@@ -1859,13 +1859,13 @@ We therefore recommend overriding the Ethernet MAC address for this purpose.
 [NOTE]
 ****
 If the driver for the wireless interface is not loaded in the `GENERIC` or custom kernel, and the computer is running FreeBSD {rel121-current}, load the corresponding [.filename]#.ko# in [.filename]#/boot/loader.conf# by adding `*driver_load="YES"*` to that file and rebooting.
-Another, better way is to load the driver in [.filename]#/etc/rc.conf# by adding it to `kld_list` (see man:rc.conf[5] for details) in that file and rebooting. 
+Another, better way is to load the driver in [.filename]#/etc/rc.conf# by adding it to `kld_list` (see man:rc.conf[5] for details) in that file and rebooting.
 This is needed because otherwise the driver is not loaded yet at the time the man:lagg[4] interface is set up.
 ****
 
 In this example, the Ethernet interface, _re0_, is the master and the wireless interface, _wlan0_, is the failover.
 The _wlan0_ interface was created from the _ath0_ physical wireless interface, and the Ethernet interface will be configured with the MAC address of the wireless interface.
-First, bring the wireless interface up (replacing _FR_ with your own 2-letter country code), but do not set an IP address.
+First, bring the wireless interface up (replacing _FR_ with the local 2-letter country code), but do not set an IP address.
 Replace _wlan0_ to match the system's wireless interface name:
 
 [source,shell]
@@ -1873,7 +1873,7 @@ Replace _wlan0_ to match the system's wireless interface name:
 # ifconfig wlan0 create wlandev ath0 country FR ssid my_router up
 ....
 
-Now you can determine the MAC address of the wireless interface:
+Determine the MAC address of the wireless interface like this:
 
 [source,shell]
 ....
@@ -2095,7 +2095,7 @@ In this case, [.filename]#/etc# and [.filename]#/var# need to be memory backed f
 
 When the system boots, memory file systems for [.filename]#/etc# and [.filename]#/var# will be created and mounted and the contents of the [.filename]#cpio.gz# files will be copied into them.
 By default, these file systems have a maximum capacity of 5 megabytes.
-If your archives do not fit, which is usually the case for [.filename]#/var# when binary packages have been installed, request a larger size by putting the number of 512 byte sectors needed (e.g., 5 megabytes is 10240 sectors) in [.filename]#${NFSROOTDIR}/conf/base/etc/md_size# and [.filename]#${NFSROOTDIR}/conf/base/var/md_size# files for [.filename]#/etc# and [.filename]#/var# file systems respectively.
+If the archives do not fit, which is usually the case for [.filename]#/var# when binary packages have been installed, request a larger size by putting the number of 512 byte sectors needed (e.g., 5 megabytes is 10240 sectors) in [.filename]#${NFSROOTDIR}/conf/base/etc/md_size# and [.filename]#${NFSROOTDIR}/conf/base/var/md_size# files for [.filename]#/etc# and [.filename]#/var# file systems respectively.
 
 [[network-pxe-setting-up-dhcp]]
 === Configuring the DHCP Server
